--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Artur-FotoArt</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista zadań</title>
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/element.css" rel="stylesheet">
+    <link href="css/form.css" rel="stylesheet">
+    <link href="css/list.css" rel="stylesheet">
+    <link href="css/section.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,900;1,100;1,300&display=swap"
@@ -19,13 +20,29 @@
     <script defer src="js/js.js"></script>
 
 </head>
-<body >
-    <form class="js-form">
-        <input class="js-newTask">
-        <button>Dodaj zadanie</button>
-    </form>
 
-    <ul class="js-tasks"></ul>
+<body class="body">
+    <div class="container">
+        <header>
+            <h1>Lista zadań</h1>
+        </header>
+        <section class="section">
+            <h2 class="section__header">Dodaj nowe zadanie</h2>
+            <form class="js-form form">
+                <input class="js-newTask form__input" placeholder="Co jest do zrobienia?">
+                <button class="form__button">Dodaj zadanie</button>
+            </form>
+        </section>
+        <section class="section">
+            <div class="section__top">
+                <h2 class="section__header">Lista zadań</h2>
+                <div class="js-taskButtons section__taskButtons"></div>
+            </div>
+            <div class="section__content">
+                <ul class="js-tasks list"></ul>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
