Changed title README.md

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             </form>
         </section>
         <section class="section">
-            <div class="section__top">
+            <header class="section__top">
                 <h2 class="section__header">Lista zadań</h2>
                 <div class="js-taskButtons section__taskButtons"></div>
-            </div>
+            </header>
             <div class="section__content">
                 <ul class="js-tasks list"></ul>
             </div>
